[gd_scene load_steps=8 format=3 uid="uid://oa5dks7v4rmo"]

[ext_resource type="Script" uid="uid://b5rd1vwvocjws" path="res://scripts/main_menu/start_screen.gd" id="1_5r6cd"]
[ext_resource type="Texture2D" uid="uid://dwpem723d1uw" path="res://assets/extra/start_bg.jpg" id="1_dcajn"]
[ext_resource type="FontFile" uid="uid://di76k0r34bfu5" path="res://assets/fonts/m23.TTF" id="2_5r6cd"]

[sub_resource type="LabelSettings" id="LabelSettings_5mkbg"]
font = ExtResource("2_5r6cd")
font_size = 120
outline_size = 40
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k611o"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcajn"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5r6cd"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[node name="Start_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5r6cd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_dcajn")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -453.0
offset_top = 108.0
offset_right = 453.0
offset_bottom = 228.0
grow_horizontal = 2
text = "THe Journey"
label_settings = SubResource("LabelSettings_5mkbg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -69.0
offset_right = 175.0
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5r6cd")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_k611o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dcajn")
theme_override_styles/focus = SubResource("StyleBoxFlat_5r6cd")
text = "Start"

[node name="Load" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5r6cd")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_k611o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dcajn")
theme_override_styles/focus = SubResource("StyleBoxFlat_5r6cd")
text = "Load Game"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5r6cd")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_k611o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dcajn")
theme_override_styles/focus = SubResource("StyleBoxFlat_5r6cd")
text = "Exit
"

[node name="FileDialog" type="FileDialog" parent="."]
oversampling_override = 1.0
position = Vector2i(0, 36)
root_subfolder = "save_file"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
